--- a/arkki_homepage/package.json
+++ b/arkki_homepage/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@hello-pangea/dnd": "^16.6.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@storybook/react-vite": "^8.1.2",
     "@storybook/test": "^8.1.2",
     "@types/react": "^18.2.66",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
