--- a/arkki_homepage/package.json
+++ b/arkki_homepage/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "lucide-react": "^0.438.0",
     "mongodb": "^6.8.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
