--- a/arkki_homepage/package.json
+++ b/arkki_homepage/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.4.0",
+    "@eslint/js": "^9.10.0",
     "@storybook/addon-essentials": "^8.1.2",
     "@storybook/addon-interactions": "^8.1.2",
     "@storybook/addon-links": "^8.1.2",
@@ -43,12 +44,15 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
+    "globals": "^15.9.0",
     "sass": "^1.77.2",
     "storybook": "^8.1.2",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.2.0"
   }
 }
